kubernetes/nginx-ingress-dns/nginx-app-tls.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-demo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: nginx-demo
  labels:
    app: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: public.ecr.aws/nginx/nginx:1.23
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-demo
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort


##### Provider -- kubernetesCRD #####
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress-route
  namespace: nginx-demo
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
spec:
  tls:
    secretName: exampledev-tls
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`*`)
      services:
        - kind: Service
          name: nginx-service
          namespace: nginx-demo
          passHostHeader: true
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              sameSite: none
              secure: true
